# pi-term

./: .env  .gitignore  Cargo.toml  Collab.md  LICENSE  README.md  schema.md
assets/: index.html  script.js  styles.css
backend/: index.js  terminal.html
backend/python_scripts/: ssh_init.py  tmux_init.py
frontend/: index.html  script.js  terminal.html
frontend/home/terminal/: script.js  terminal.html
frontend/python_scripts/: minicom_init.py  setup.py  ssh_init.py  tmux_init.py
resources/: data.db
resources/python_scripts/: minicom_init.py
src/: db.rs  main.rs  router.rs  shell_cmds.rs
