[package]
name = "pi-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon="1.6.0"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.89"
dotenvy = "0.15.6"
tokio = { version = "1.22.0", features = ["full"] }
rustls = "0.20.7"
axum = "0.6.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

