[package]
name = "pi-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.14.0"
thirtyfour = "0.32.0-rc.6"
rayon="1.6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.89"
dotenvy = "0.15.6"
tokio = { version = "1.22.0", features = ["full"] }
rustls = "0.20.7"
axum = { version = "0.6.7", features = ["default", "form"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

